[package]
name = "raven"
version = "0.1.0"
authors = ["tsuboshy <tsuboshy@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
reqwest = "0.9.9"
log = "0.4.6"
env_logger = "0.6.0"
combine = "3.6.6"
chrono = "0.4.6"
encoding_rs = "0.8.17"
rusoto_core = "0.36.0"
rusoto_s3 = "0.36.0"
lazy_static = "1.2.0"