[package]
name = "raven"
version = "0.1.0"
authors = ["tsuboshy <tsuboshy@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
reqwest = "0.9.9"
log = "0.4.6"
combine = "3.6.6"
chrono = "0.4.6"
encoding_rs = "0.8.17"
rusoto_core = "0.36.0"
rusoto_s3 = "0.36.0"
lazy_static = "1.2.0"
futures = "0.1"
futures-cpupool = "0.1"
log4rs = "0.8.3"
rs-es = "0.11.2"
serde_json = "1.0.39"
rand = "0.6"
uuid = "0.7"
slack-hook = "0.7"
hostname = "0.1.5"